2015-02-24 Matt:
	* Trying to clean up a little.  First round done.

2015-02-10 Matt:
	* Adding new class BeamProfile.hh to read in text file from profile.
	* Charge profile structure included for the beam.
	* Data directory added for necessary data file storage
	* Beam charge distribution added to data

2015-02-09 Matt:
	* Checked update of increasing beam width
	* Need to incorporate beam structure in next update

2014-11-18 Matt:
	* Bunch structure added with delta function spikes.
		- Will add more later to test this crazy bunch structure we will have

2014-11-06 Matt:
	* There was an error in how I was handling the bins. I was putting things into a Profile,
		which will average the result if multiple entries end up in one bin. However this
		is not the way to do it. We are evaluating a function a specific steps in time,
		therefore the binning must remain fixed.  It is too hard to do with scattered
		root scripts, therefore I have written new analysis code.
	* Updates to all scripts that were used in testing are now committed
	* Tagging and then will introduce bunch structure to the beam.

2014-10-17 Matt:
	* Fixing time check in SteppingAction. Including everything in window.
	* Moving beam slightly off-center for all particles in one position case
	* Minor updates to python scripts.
	* Adding miscellanous plotting scripts
	* Tagging before testing some updates

2014-10-02 Matt:
	* Updating EField and APotPlots. Latest investigations have been added.
	* Tagging Version 00.04
	* Added options --flat <float> and --gauss <float> such that beam profile can be set
	* Adding short script to plot beam profile from output: PlotBeamProfile
		This script needs output from PrimaryGeneratorAction. Search f_test.
	* Adding some methods to myHist.C
	* Fixing PrimaryGeneratorAction. Wasn't looping over n_particles.
	* Adding plotting script to compare the point source, flat, and gaussian particle guns.

2014-10-01 Matt: