@@ -20,6 +20,7 @@ class EventAction : public G4UserEventAction
   // Constructor/Destructor
   EventAction(std::ofstream* trkFile, std::ofstream* stepFile,
 	      std::ofstream* vFile,
+	      std::ofstream* eFile,
 	      std::vector<Antenna*>* ants);
   ~EventAction();
 
@@ -31,6 +32,7 @@ class EventAction : public G4UserEventAction
   std::ofstream* m_stepOutput;       // File to store step output
   //MyTreeWriter* m_treeWriter; 
   std::ofstream* m_VPotOut;           // File for vector potential
+  std::ofstream* m_EFOut;             // File for efield from end-point
   std::vector<Antenna*>* m_ants;      // Pointer to antenna
 
 };
