@@ -30,6 +30,9 @@ class SteppingAction : public G4UserSteppingAction
   // Write the vector potential info
   void VPotentialZHSStyle(const G4Step*);
 
+  // Write the Efield from Endpoint
+  void EFieldEndpointStyle(const G4Step*);
+
  private:
 
   std::ofstream* m_output;  
@@ -45,7 +48,7 @@ class SteppingAction : public G4UserSteppingAction
   // Set the unit vector to antenna
   // along with the distance to antenna
   void setUnitVector(G4ThreeVector v_ant,
-		     G4ThreeVector v_midPoint,
+		     G4ThreeVector v_Point,
 		     G4ThreeVector &u,
 		     G4double &R);
 
@@ -59,6 +62,20 @@ class SteppingAction : public G4UserSteppingAction
   // Testing
   G4double getBeta(const G4Step* step);
 
-};
+  // Efield from one endpoint
+  void fillEFieldEndpoint(G4StepPoint* point,   // point in question
+			  G4Track* track,       // track pointer (maybe not necessary?)
+			  G4double dt,          // time step info
+			  G4bool isFirstPoint,  // Is first point in endpoint method
+			  G4ThreeVector V);
 
+  // Calculate the e-field from paramters
+  // for the endpoint method
+  G4ThreeVector getEFieldEndpoint(G4ThreeVector V,    // Velocity at step in m/s 
+				   G4ThreeVector rhat, // unit vector towards antenna 
+				   G4double R,         // distance to antenna
+				   G4double dt,        // time-step
+				   G4double q);        // charge
+
+};
 #endif
